--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.datasource.hikari.connection-timeout=10000
 spring.jpa.database=default
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.default_schema=PLUGIN
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
@@ -32,16 +32,20 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-#logging.level.com.gable=INFO
 logging.level.root=INFO
-management.endpoints.web.exposure.include=*
+logging.level.th.co.ais.mimo.debt=DEBUG
 
-opentracing.jaeger.service-name= debt-app-exempt
-opentracing.jaeger.enabled=true
-opentracing.jaeger.log-spans=true
-opentracing.jaeger.probabilistic-sampler.sampling-rate=1
-opentracing.jaeger.enable-b3-propagation = true
+#management.endpoints.web.exposure.include=*
+
+#opentracing.jaeger.service-name= debt-app-nego
+#opentracing.jaeger.enabled=true
+#opentracing.jaeger.log-spans=true
+#opentracing.jaeger.probabilistic-sampler.sampling-rate=1
+#opentracing.jaeger.enable-b3-propagation = true
 #opentracing.jaeger.http-sender.url: http://jaeger-collector.istio-system.svc.cluster.local:14268/api/traces
 
 springdoc.swagger.server-url=http://localhost:8061
 springdoc.swagger-ui.enabled=true
+
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+#logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
