--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
                 </exclusion>
             </exclusions>
         </dependency>-->
-        <dependency>
+        <!--<dependency>
             <groupId>ch.qos.logback.contrib</groupId>
             <artifactId>logback-json-classic</artifactId>
             <version>0.1.5</version>
@@ -150,7 +150,7 @@
             <groupId>ch.qos.logback.contrib</groupId>
             <artifactId>logback-jackson</artifactId>
             <version>0.1.5</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
