--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8235
-api.path = debt-app-exempt
+server.port=8405
+api.path = app/debt-app-exempt
 spring.application.name = debt-app-exempt
 
 #spring.profiles.active=dev
