[Dmsem004] service insert update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8405
-api.path = app/debt-app-exempt
-spring.application.name = debt-app-exempt
+api.path = app/debt-exempt
+spring.application.name = debt-exempt
 
 #spring.profiles.active=dev
 spring.jackson.date-format=dd/MM/yyyy HH:mm:ss
